assets/css/style.css
/* ... */
/* .item-box-blog-date span.day {
  font-size: 16px;
} */

.item-box-blog-body {
  padding: 5px;             /* Reduced from 10px*/
  min-height: 200px;        /* Added by me*/
}

.item-heading-blog a h5 {
  margin: 0;
  line-height: 1;
  text-decoration:none;
  transition: color 0.3s;   /* Was 0.3s but have increased while I work on the styling. Will need to be reduced again later!!! */
}

.item-box-blog-heading a {
    text-decoration: none;
}

/* .item-box-blog-data p {     /* These were for the Admin and Comments text under the image, but I have removed these in the html
  font-size: 13px;
} */

/* .item-box-blog-data p i {
  font-size: 12px;
} */

/* .item-box-blog-text {
  max-height: 150px;        /* increased from 100px 
  overflow: hidden;
} */

.mt-10 {
  float: left;
  margin-top: -10px;
  padding-top: 10px;
}

.btn.bg-blue-ui.white.read {
  cursor: pointer;
  padding: 4px 20px;
  float: left;
  margin-top: 10px;
}

/* .btn.bg-blue-ui.white.read:hover {
  box-shadow: 0px 5px 15px inset #4d5f77;
} */



/* ******************************************************** Footer Section */
/* *********************************************************************** */

.footer--container{
    color: #dae0e4;
    max-width: 100%;
    margin: 0;
    height: fit-content;
    padding: 0;
    background-color: #343434;
}

.newsletter{
    text-align: center;
    font-weight: 300;
    margin-top: 20px;
}
.newsletter i{
    color: #F47A60;
}

.newsletter p{
    color: #dae0e4;
}

form{
    text-align: center;
} 


footer form input:hover{
    border: 2px solid #7FE7DC;
    
}

.social-media{
    color: #fff;
    padding-top: 15px;
    background-color: #343434;  /*?????*/
    /*border-top: ridge; */
}

.social-media  i{       /* Code snippet modified from CI Resume walk-through project */
    width: 32px;
    height: 32px;
    padding: 12px 0;
    border-radius: 50%;
    font-size: 13px;
    line-height: 7px;
    text-align: center;
    color: #7FE7DC;
    background: #545454;
    transition: all 0.35s ease-in-out;
    -moz-transition: all 0.35s ease-in-out;
    -webkit-transition: all 0.35s ease-in-out;
    -o-transition: all 0.35s ease-in-out;
}

.social-media i:hover{
    background: #F47A60;
}                       /* End of Code snippet from CI Resume walk-through project */

/* *************************************************************** Buttons */
/* *********************************************************************** */

.btn-navbar{
    font-family: 'Roboto', sans-serif;
    font-weight: bold;
    color: #fff;
    background-color: #F47A60;
    border-radius: 22px;
}

.btn, .btn-info .btn-styling, .btn-navbar{
    border: none;
}

.btn-light-blue:hover{
    background-color: #7FE7DC;
    color: #35798e;
}

.btn-styling{
    font-weight: bold;
    color: #fff;
    background-color: #F47A60;
    border-radius: 22px;
}

.btn-styling:hover{
    background-color: #35798e;
}

.center{
    align-items: center;
}


/* .btn-modal-close{
    font-weight: bold;
    color: #fff;
    border: #252525 1px solid;
    background-color: #7FE7DC;
    border-radius: 22px;
} */

 .btn-close{
    font-weight: bold;
    color: #fff;
    background-color: #7FE7DC;
    border-radius: 22px;
} 

.button--coral--container{
    max-width: 100%;
    min-height: fit-content;
    max-height: fit-content;
    margin: 3px;
    border-radius: 22px;
    color: #fff;
    background-color: #F47A60;
    border: #35798e 3px solid;
} 

/* ******************************************** Media Queries for index.html */

@media screen and (max-width: 1500px) {
    .item-box-blog {
        margin: 10px;
    }
}

@media screen and (max-width: 991px) {
    .item-box-blog {
        margin: 35px;
    }
}

@media screen and (max-width: 695px) {
    .item-box-blog {
        margin: 10px;
    }
} 



/* *****************************************************itinerary.html page */
/* *********************************************************************** */








/* ********************************* Itinerary Section */

.itinerary--container{
    max-width: 100vw;
    min-height: 31rem;
    max-height: fit-content;
    margin: 0 auto;
    /* border-bottom-style: ridge; */
    background-color: #7FE7DC;
}

.itinerary--header{
    max-width: 80vw;
    min-height: fit-content;
    max-height: fit-content;
    margin: 0 auto;
    text-align: center;
    color: #F47A60;
    font-weight: 900;
    border-radius: 22px;
    border: #fff 8px solid;
    background-color: #ffffff;

    height: 16vh;    
    background: url('../images/ardgillan2.png') center center / cover no-repeat fixed; 
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
}

.itinerary--body{
    max-width: 80vw;
    min-height: fit-content;
    max-height: fit-content;
    margin: 0 auto;
    border-radius: 22px;
    border: #fff 8px solid;
    background-color: #ffffff;
}

.itinerary--header h2{
    width: 100%;
    text-align: center;
    text-shadow: 2px 2px #35798e;
    font-weight: 900;
    padding-bottom: 5px;
    background: rgba(236, 231, 231, 0.4);
}

.outer--day--container{
    width: 100%;
    border: #35798e 1px solid;
    border-radius: 22px;
    padding: 0;
    /* margin: 0 15px 0 15px; */
} 

.day--header--container{        /* package--option */
    max-width: 100vw;
    min-height: fit-content;
    max-height: fit-content;
    border-radius: 22px;
    color: #35798e;
    background-color: #ffffff;
    border: #35798e 1px solid;
}

.day--container{
    max-width: 100%;
    min-height: fit-content;
    max-height: fit-content;
    border-radius: 22px;
    background-color: #ffffff;
}
/*
.day--one--image{
    width: 50%;
    height: 300px;
    border-radius: 22px;
    background: url('../images/newgrange-sunrise.png') center center / cover no-repeat; 
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
} */

.itinerary--description{
    font-size: 18px;
}
/* ... */

